# lianli_207_lcd

./: AGENTS.md  CLAUDE.md  PROTOCOL.md  README.md  install.sh  main.py  pyproject.toml  reinstall.sh  uninstall.sh
.github/: dependabot.yml
lcd_driver/: main.py
systemd/: lcd-driver.service.template
