[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lianli-lcd-driver"
version = "0.1.0"
description = "Linux driver for Lian Li Lancool 207 Digital LCD screen"
requires-python = ">=3.12"
dependencies = [
    "pyusb",
    "pillow",
    "pycryptodome",
    "psutil",
]

[project.scripts]
lcd-driver = "lcd_driver.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lcd_driver*"]

